--- a/components/ServiciosPage/VisionSection/VisionSection.scss
+++ b/components/ServiciosPage/VisionSection/VisionSection.scss
@@ -149,16 +149,16 @@
     position: absolute;
     display: none;
     width: 50%;
-    height: 300px; /* Fixed height */
+    height: 300px;
     @include z-index(above);
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     overflow: hidden;
 
     @include min-width(xl) {
       display: block;
-      left: 100%;
-      bottom: -150px;
-      transform: translate(-50%, 0);
+      left: 70%;
+      bottom: -300px;
+      transform: translate(-60%, 0);
       margin: 0;
       width: 25%;
     }
